=========================================================================
CHANGE LOG
=========================================================================

2008-04-11 Warren L. DeLano <warren@delsci.com>	

	* fixed problem with saving session/show file ext on Windows.
	
2008-04-04 Warren L. DeLano <warren@delsci.com>	

	* fixed exception on windows when home directory is inaccessible
	
2008-03-31 Warren L. DeLano <warren@delsci.com>	

	* scene_order command 
	
	* improved hash compatibility for cached surfaces
	
	* $PYMOL_DATA now used instead of $PYMOL_PATH for align matrix
	
2008-03-28 Warren L. DeLano <warren@delsci.com>	

	* Cleaned up a launch issue under Centos 4.5

	* Accomodating default Gnome Panel window positioning under Linux
	
2008-03-27 Warren L. DeLano <warren@delsci.com>	

	* Fixed quicky group-dragging behavior
	
2008-03-26 Warren L. DeLano <warren@delsci.com>	

	* Eliminated a longstanding GC bug (problematic on 64bit/py251)
	
2008-03-22 Warren L. DeLano <warren@delsci.com>	

	* Fixed bugs with label sizes & positions in orthoscopic mode

2008-03-22 Warren L. DeLano <warren@delsci.com>	

	* PTR, SEP, TPO now included in alignments
	
2008-03-12 Warren L. DeLano <warren@delsci.com>	

	* cones are now working (flat-capped only...)
		
2008-03-09 Warren L. DeLano <warren@delsci.com>	

	* added Movie->Program submenus and make other changes to Movie

	* updated buttons in upper right panel -- added 'orient' button
	
	* movie_rock modified so as to defer to rock setting by default
	
	* reduced Tcl/Tk pause on startup from 1 sec to 0.1 sec
	
	* rock setting (replaces hardcoded Control->Rocking property)
	
2008-03-08 Warren L. DeLano <warren@delsci.com>	

	* added "modal" draw loop to deal with Windows GL update bugs
	
2008-03-07 Warren L. DeLano <warren@delsci.com>	

	* added cartoon_putty_transform setting for comparison tasks
		
2008-02-24  Warren L. DeLano <warren@delsci.com>	

	* select now applies validate_object_names to selection name
	